--- a/source/scss/mixins.scss
+++ b/source/scss/mixins.scss
@@ -8,13 +8,16 @@
   margin: 0;
   padding: 0;
   border: none;
+  background-color: transparent;
 }
 
-@mixin flex {
+@mixin flex-center {
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@mixin fonts($size: 14px, $weight: 400, $color: #000, $name: 'Open Sans') {
+@mixin fonts($size: 16px, $weight: 600, $color: rgba(48, 48, 48, 1), $name: 'SF Pro Display') {
   font-family: $name, 'Arial', sans-serif;
   font-size: $size;
   font-weight: $weight;
@@ -22,6 +25,7 @@
 }
 
 @mixin hover-focus-active-link {
+
   &:hover,
   &:focus {
     opacity: 0.7;
@@ -33,6 +37,7 @@
 }
 
 @mixin hover-active($hover, $active) {
+
   &:hover,
   &:focus {
     background-color: $hover;
