Styled header and mobile menu

--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -2,3 +2,7 @@
 @import "./fonts.scss";
 @import "./global.scss";
 @import "./mixins.scss";
+@import "./blocks/header.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/nav.scss";
+@import "./blocks/owner-info.scss";
