--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -6,3 +6,7 @@
 @import "./blocks/logo.scss";
 @import "./blocks/nav.scss";
 @import "./blocks/owner-info.scss";
+@import "./blocks/main.scss";
+@import "./blocks/welcome-section.scss";
+@import "./blocks/title.scss";
+@import "./blocks/orange.scss";
