added welcome part styling

--- a/source/scss/blocks/welcome-section.scss
+++ b/source/scss/blocks/welcome-section.scss
@@ -8,4 +8,11 @@
         background-repeat: no-repeat;
         background-position: 0 8px;
     }
+
+    &__contact-form {
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        padding: 0 15px;
+    }
 }
