--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -10,3 +10,6 @@
 @import "./blocks/welcome-section.scss";
 @import "./blocks/title.scss";
 @import "./blocks/orange.scss";
+@import "./blocks/contact-form.scss";
+@import "./blocks/button-blue.scss";
+@import "./blocks/confidence-policy.scss";
