--- a/source/scss/bg.scss
+++ b/source/scss/bg.scss
@@ -2,4 +2,5 @@ body {
   background-repeat: no-repeat;
   background-position: center 0;
   background-image: url("../img/Главная.png");
+  // opacity: 0.4;
 }
