--- a/source/scss/blocks/title.scss
+++ b/source/scss/blocks/title.scss
@@ -14,6 +14,7 @@
         padding-left: 32px;
         padding-right: 20px;
         margin: 0 auto;
+        margin-bottom: 55px;
 
         & .orange {
             white-space: nowrap;
