--- a/source/scss/global.scss
+++ b/source/scss/global.scss
@@ -12,7 +12,7 @@ body {
   min-width: 320px;
   margin: 0;
   padding: 0;
-  font-family: 'Open Sans', 'Arial', sans-serif;
+  font-family: 'SF Pro Display', 'Arial', sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 25px;
