--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -13,3 +13,4 @@
 @import "./blocks/contact-form.scss";
 @import "./blocks/button-blue.scss";
 @import "./blocks/confidence-policy.scss";
+@import "./blocks/tabs-section.scss";
