--- a/source/scss/blocks/contact-form.scss
+++ b/source/scss/blocks/contact-form.scss
@@ -29,6 +29,7 @@
         padding: 8px 35px;
         margin-bottom: 26px;
         color: rgba(48, 48, 48, 1);
+        outline: none;
 
         &::placeholder {
             font-family: SF Pro Display;
