--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -14,3 +14,4 @@
 @import "./blocks/button-blue.scss";
 @import "./blocks/confidence-policy.scss";
 @import "./blocks/tabs-section.scss";
+@import "./blocks/tabs.scss";
