--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -15,3 +15,4 @@
 @import "./blocks/confidence-policy.scss";
 @import "./blocks/tabs-section.scss";
 @import "./blocks/tabs.scss";
+@import "./blocks/tab.scss";
