--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -16,3 +16,5 @@
 @import "./blocks/tabs-section.scss";
 @import "./blocks/tabs.scss";
 @import "./blocks/tab.scss";
+@import "./blocks/important-section.scss";
+@import "./blocks/important.scss";
