--- a/source/scss/blocks/welcome-section.scss
+++ b/source/scss/blocks/welcome-section.scss
@@ -22,6 +22,8 @@
             display: block;
             top: -26px;
             left: -10px;
+            width: 100%;
+            overflow: hidden;
         }
     }
 
