added projet swiper

--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -18,3 +18,6 @@
 @import "./blocks/tab.scss";
 @import "./blocks/important-section.scss";
 @import "./blocks/important.scss";
+@import "./blocks/ready-section.scss";
+@import "./blocks/project.scss";
+@import "./blocks/img-container.scss";
