--- a/source/scss/blocks/project.scss
+++ b/source/scss/blocks/project.scss
@@ -1,5 +1,50 @@
 .project {
     width: 100%;
 
-    
+    &__img-container {
+        margin-bottom: 55px;
+    }
+
+    &__title {
+        margin: 0;
+        margin-bottom: 17px;
+        font-family: SF Pro Display, sans-serif;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 24px;
+        color: #303030;
+    }
+
+    &__features-list {
+        @include list-reset;
+
+        font-family: SF Pro Display, sans-serif;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 22px;
+        color: #828282;
+
+        padding-left: 24px;
+    }
+
+    &__item {
+        margin-bottom: 10px;
+        position: relative;
+
+        &:last-child {
+            margin: 0;
+        }
+
+        &::before {
+            position: absolute;
+            content: "";
+            width: 12px;
+            height: 1px;
+            background-color: #c4c4c4;
+            left: -24px;
+            top: 12px;
+        }
+    }
 }
