--- a/source/scss/blocks/ready-section.scss
+++ b/source/scss/blocks/ready-section.scss
@@ -1,17 +1,25 @@
 .ready-section {
     width: 100%;
     background: #FDF9F3;
-    
+
     &__wrapper {
         width: 100%;
         padding: 0 15px;
         padding-top: 70px;
     }
-    
+
     &__list {
         @include list-reset;
 
         width: 100%;
         padding-top: 40px;
+    }
+
+    &__item {
+        margin-bottom: 79px;
+
+        &:last-child {
+            margin: 0;
+        }
     }
 }
