results section mobile

--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -21,3 +21,5 @@
 @import "./blocks/ready-section.scss";
 @import "./blocks/img-container.scss";
 @import "./blocks/project.scss";
+@import "./blocks/about-section.scss";
+@import "./blocks/results.scss";
