--- a/source/scss/blocks/ready-section.scss
+++ b/source/scss/blocks/ready-section.scss
@@ -1,6 +1,7 @@
 .ready-section {
     width: 100%;
     background: #FDF9F3;
+    padding-bottom: 70px;
 
     &__wrapper {
         width: 100%;
@@ -17,9 +18,25 @@
 
     &__item {
         margin-bottom: 79px;
+        position: relative;
+
+        &::after {
+            position: absolute;
+            content: "";
+            bottom: -40px;
+            width: 100%;
+            height: 1px;
+            background-color: #c4c4c4;
+        }
 
         &:last-child {
             margin: 0;
+
+            &::after {
+                width: 1px;
+                height: 1px;
+                background-color: transparent;
+            }
         }
     }
 }
