finished main page for mobile

--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -23,3 +23,7 @@
 @import "./blocks/project.scss";
 @import "./blocks/about-section.scss";
 @import "./blocks/results.scss";
+@import "./blocks/reviews-section.scss";
+@import "./blocks/reviews.scss";
+@import "./blocks/contact-popup.scss";
+@import "./blocks/footer.scss";
