--- a/source/scss/blocks/orange.scss
+++ b/source/scss/blocks/orange.scss
@@ -1,7 +1,11 @@
 .orange {
     color: #FF7800;
-
+    
     &--oneline {
         white-space: nowrap;
+    }
+    
+    &-label {
+        color: #FF7800;
     }
 }
