--- a/source/scss/blocks/owner-info.scss
+++ b/source/scss/blocks/owner-info.scss
@@ -17,6 +17,77 @@
         left: calc(-100vw / 2 + 50%);
     }
 
+    &--no-border {
+        margin: 0;
+        max-width: unset;
+        flex-wrap: wrap;
+        padding: 15px;
+        padding-top: 40px;
+        justify-content: space-around;
+
+        &::before {
+            position: absolute;
+            content: "";
+            width: 0;
+            height: 0;
+            background-color: transparent;
+            top: unset;
+            left: unset;
+        }
+
+        & .owner-info__text {
+            font-family: SF Pro Display, sans-serif;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 19px;
+            color: #FFFFFF;
+            
+        }
+
+        & .owner-info__name {
+            color: #FFFFFF;
+        }
+        & .owner-info__phone {
+            color: #FF7800;
+        }
+        & .owner-info__phone-icn {
+            fill: #FF7800;
+        }
+
+        & .owner-info__submit-button {
+            width: 100%;
+            margin-top: 15px;
+            display: block;
+        }
+
+        & .owner-info__confidence-policy {
+
+            margin-right: auto;
+        }
+
+        & .owner-info__confidence-policy a{
+            font-family: SF Pro Display, sans-serif;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 13px;
+            line-height: 16px;
+            text-align: right;
+            color: #828282;
+            position: relative;
+
+            &::after {
+                position: absolute;
+                content: "";
+                width: 100%;
+                height: 1px;
+                background-color: #828282;
+                left: 0;
+                bottom: -4px;
+            }
+        }
+    }
+
     &__avatar {
         width: 56px;
         height: 56px;
