--- a/source/scss/blocks/results.scss
+++ b/source/scss/blocks/results.scss
@@ -25,8 +25,18 @@
         padding-bottom: 40px;
         
         &:last-child {
-            border-bottom: 1px solid #c4c4c4;
             padding-bottom: 78px;
+            position: relative;
+
+            &::after {
+                position: absolute;
+                content: "";
+                width: 100vw;
+                height: 1px;
+                bottom: 0;
+                background-color: #c4c4c4;
+                left: calc(-100vw / 2 + 50%);
+            }
         }
     }
 
