--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -26,4 +26,6 @@
 @import "./blocks/reviews-section.scss";
 @import "./blocks/reviews.scss";
 @import "./blocks/contact-popup.scss";
+@import "./blocks/orange-label.scss";
 @import "./blocks/footer.scss";
+@import "./blocks/tel-block.scss";
