--- a/source/scss/blocks/title.scss
+++ b/source/scss/blocks/title.scss
@@ -35,4 +35,13 @@
         line-height: 14px;
         color: #BDBDBD;
     }
+
+    &__line {
+        display: block;
+
+        &:nth-child(2) {
+            padding-left: 35px;
+            margin-bottom: 20px;
+        }
+    }
 }
