--- a/source/scss/blocks/header.scss
+++ b/source/scss/blocks/header.scss
@@ -28,3 +28,16 @@
         }
     }
 }
+
+
+@media (min-width: 768px) {
+    .header {
+        &__wrapper {
+            display: flex;
+            justify-content: space-between;
+        }
+        &__menu-button {
+            display: none;
+        }
+    }
+}
