--- a/source/scss/blocks/nav.scss
+++ b/source/scss/blocks/nav.scss
@@ -33,3 +33,47 @@
         color: #000;
     }
 }
+
+@media (min-width: 768px) {
+    .nav {
+        display: flex;
+        flex-wrap: wrap-reverse;
+        justify-content: flex-end;
+        width: 50%;
+        padding: 0;
+
+        &__list {
+            padding: 0;
+            flex-direction: row;
+            justify-content: space-between;
+            max-width: 369px;
+        }
+
+        &__item {
+            margin-bottom: 0;
+        }
+
+        &__link {
+            text-transform: none;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 19px;
+
+            &:hover {
+                color: #403DE4;
+                position: relative;
+
+                &::before {
+                    position: absolute;
+                    content: "";
+                    width: 1px;
+                    height: 8px;
+                    background-color: #403DE4;
+                    bottom: -12px;
+                    left: 50%;
+                }
+            }
+        }
+    }
+}
