--- a/source/scss/blocks/owner-info.scss
+++ b/source/scss/blocks/owner-info.scss
@@ -133,3 +133,18 @@
         transform: translateY(3px);
     }
 }
+
+@media (min-width: 768px) {
+    .owner-info {
+        margin: 0;
+        margin-bottom: 15px;
+
+        &::before {
+            width: 1px;
+            height: 1px;
+            background-color: transparent;
+            top: unset;
+            left: unset;
+        }
+    }
+}
