--- a/source/scss/blocks/tabs-section.scss
+++ b/source/scss/blocks/tabs-section.scss
@@ -23,3 +23,12 @@
         margin-bottom: 32px;
     }
 }
+
+@media (min-width: 768px) {
+    .tabs-section {
+        &__wrapper {
+            background-image: none;
+            padding-top: 0;
+        }
+    }
+}
