--- a/source/scss/blocks/button-blue.scss
+++ b/source/scss/blocks/button-blue.scss
@@ -36,3 +36,15 @@
         }
     }
 }
+
+@media (min-width: 768px) {
+    .button-blue {
+        &--arrow {
+            margin-right: 10%;
+
+            &::before {
+                left: -13vw;
+            }
+        }
+    }
+}
