--- a/source/scss/blocks/footer.scss
+++ b/source/scss/blocks/footer.scss
@@ -19,3 +19,19 @@
         color: transparent;
     }
 }
+
+@media (min-width: 768px) {
+    .footer {
+        padding: 0;
+        display: flex;
+
+        &__logo {
+            padding-top: 40px;
+            width: 50%;
+        }
+
+        &__contacts {
+            width: 50%;
+        }
+    }
+}
