--- a/source/scss/blocks/header.scss
+++ b/source/scss/blocks/header.scss
@@ -41,3 +41,15 @@
         }
     }
 }
+
+@media (min-width: 1024px) {
+    .header {
+        border-bottom: 1px solid #C4C4C4;
+        &__wrapper {
+            max-width: 1600px;
+            padding: 0 100px;
+            margin: 0 auto;
+            border-bottom: none;
+        }
+    }
+}
