--- a/source/scss/blocks/header.scss
+++ b/source/scss/blocks/header.scss
@@ -47,7 +47,7 @@
         border-bottom: 1px solid #C4C4C4;
         &__wrapper {
             max-width: 1600px;
-            padding: 0 100px;
+            padding: 0 6.25%;
             margin: 0 auto;
             border-bottom: none;
         }
