--- a/source/scss/blocks/confidence-policy.scss
+++ b/source/scss/blocks/confidence-policy.scss
@@ -10,3 +10,11 @@
         border-bottom: 1px solid rgba(48, 41, 219, 0.3);
     }
 }
+
+@media (min-width: 1600px) {
+    .confidence-policy {
+        width: 220px;
+        display: inline-block;
+        padding-left: 20px;
+    }
+}
