--- a/source/scss/blocks/title.scss
+++ b/source/scss/blocks/title.scss
@@ -48,6 +48,11 @@
 
 @media (min-width: 1600px) {
     .title {
+        font-style: normal;
+        font-weight: 600;
+        font-size: 36px;
+        line-height: 43px;
+
         &--main {
             font-weight: 600;
             font-size: 36px;
