--- a/source/scss/bg.scss
+++ b/source/scss/bg.scss
@@ -1,6 +1,6 @@
 body {
   background-repeat: no-repeat;
   background-position: center 0;
-  background-image: url("../img/Главная 1.png");
-  opacity: 0.4;
+//   background-image: url("../img/Главная 1.png");
+//   opacity: 0.4;
 }
