--- a/source/scss/blocks/main.scss
+++ b/source/scss/blocks/main.scss
@@ -2,6 +2,8 @@
     width: 100%;
 
     &__section {
+        max-width: 1660px;
+        margin: 0 auto;
         &--hidden {
             display: none;
         }
