--- a/source/scss/blocks/welcome-section.scss
+++ b/source/scss/blocks/welcome-section.scss
@@ -66,6 +66,7 @@
     .welcome-section {
         padding-top: 0;
         position: relative;
+        overflow: hidden;
         &__wrapper {
             padding-bottom: 266px;
             max-width: 1600px;
@@ -84,6 +85,7 @@
                 top: 81px;
                 left: -57px;
                 line-height: 350px;
+                overflow: visible;
             }
         }
 
