--- a/source/scss/blocks/important.scss
+++ b/source/scss/blocks/important.scss
@@ -111,3 +111,26 @@
         background-position: 5% center, 30% 45%;
     }
 }
+
+@media (min-width: 1600px) {
+    .important {
+        display: flex;
+        flex-wrap: wrap;
+
+        background-size: 361px 269px, 396px 442px;
+        background-position: 0 358px,180px 90px;
+
+        &__item {
+            max-width: 351px;
+            min-width: 351px;
+
+            &:nth-child(3) {
+                border-bottom-color: #BDBDBD;
+            }
+
+            &:last-child {
+                margin-left: 351px;
+            }
+        }
+    }
+}
