--- a/source/scss/blocks/img-container.scss
+++ b/source/scss/blocks/img-container.scss
@@ -40,3 +40,14 @@
         }
     }
 }
+
+@media (min-width: 1600px) {
+    .img-container {
+        width: 100%;
+        height: 450px;
+
+        &__pag {
+            bottom: 20px;
+        }
+    }
+}
