--- a/source/scss/blocks/important-section.scss
+++ b/source/scss/blocks/important-section.scss
@@ -40,10 +40,18 @@
 
 @media (min-width: 1600px) {
     .important-section {
+        &__wrapper {
+            padding-left: 100px;
+            padding-right: 100px;
+        }
+        &__title {
+            font-weight: 600;
+            font-size: 36px;
+            line-height: 43px;
+        }
         &__text {
-            max-width: 1000px;
+            max-width: 820px;
             margin-left: auto;
-            padding-right: 106px;
             font-weight: normal;
             font-size: 26px;
             line-height: 140%;
