--- a/source/scss/blocks/ready-section.scss
+++ b/source/scss/blocks/ready-section.scss
@@ -40,3 +40,37 @@
         }
     }
 }
+
+@media (min-width: 1600px) {
+    .ready-section {
+        width: 100%;
+        max-width: unset;
+        padding-bottom: 200px;
+
+        &__wrapper {
+            max-width: 1600px;
+            margin: 0 auto;
+            padding-left: 100px;
+            padding-right: 100px;
+
+        }
+        &__list {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            align-items: center;
+        }
+
+        &__item {
+            &:last-child {
+                margin: 0;
+    
+                &::after {
+                    width: 100%;
+                    height: 1px;
+                    background-color: #c4c4c4;
+                }
+            }
+        }
+    }
+}
