--- a/source/scss/blocks/tabs-section.scss
+++ b/source/scss/blocks/tabs-section.scss
@@ -33,7 +33,7 @@
     }
 }
 @media (min-width: 1600px) {
-    .tabs-section {;
+    .tabs-section {
         &__wrapper {
             padding: 0 100px;
         }
