fix width section

--- a/source/scss/blocks/important-section.scss
+++ b/source/scss/blocks/important-section.scss
@@ -41,6 +41,8 @@
 @media (min-width: 1600px) {
     .important-section {
         &__wrapper {
+            max-width: 1600px;
+            margin: 0 auto;
             padding-left: 100px;
             padding-right: 100px;
         }
