--- a/source/scss/blocks/reviews-section.scss
+++ b/source/scss/blocks/reviews-section.scss
@@ -7,3 +7,13 @@
         margin-bottom: 30px;
     }
 }
+
+@media (min-width: 1600px) {
+    .reviews-section {
+        &__wrapper {
+            max-width: 1600px;
+            margin: 0 auto;
+            padding: 100px;
+        }
+    }
+}
