--- a/source/scss/blocks/tel-block.scss
+++ b/source/scss/blocks/tel-block.scss
@@ -35,3 +35,23 @@
         display: none;
     }
 }
+
+@media (min-width: 1600px) {
+    .tel-block {
+        width: 580px;
+
+        &__footer {
+            width: 272px;
+            display: block;
+            margin: 0 auto;
+            margin-top: 260px;
+            transform: translateX(-50px);
+            font-family: SF Pro Display, sans-serif;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 14px;
+            line-height: 22px;
+            color: #4F4F4F;
+        }
+    }
+}
