--- a/source/scss/blocks/contact-popup.scss
+++ b/source/scss/blocks/contact-popup.scss
@@ -45,5 +45,46 @@
         margin-bottom: 70px;
     }
 
-    
+
+}
+
+@media (min-width: 1600px) {
+    .contact-popup {
+        &::before {
+            width: 88vw;
+            font-weight: 600;
+            font-size: 340px;
+            line-height: 406px;
+            height: 563px;
+            top: 81px;
+            left: 50%;
+            transform: translateX(-50%);
+            line-height: 350px;
+            overflow: hidden;
+        }
+        
+        &__wrapper {
+            display: flex;
+            flex-wrap: wrap;
+            position: relative;
+            max-width: 1600px;
+            margin: 0 auto;
+            padding: 0 100px;
+            padding-top: 100px;
+            padding-bottom: 200px;
+        }
+
+        &__title {
+            width: 100%;
+            font-weight: 600;
+            font-size: 36px;
+            line-height: 43px;
+            text-transform: uppercase;
+        }
+
+        &__contact-form {
+            width: 820px;
+            padding-top: 30px;
+        }
+    }
 }
