--- a/source/scss/blocks/owner-info.scss
+++ b/source/scss/blocks/owner-info.scss
@@ -85,6 +85,17 @@
                 left: 0;
                 bottom: -4px;
             }
+
+            &:hover,
+            &:focus {
+                color: #FF7800;
+            }
+            
+            &:active {
+                color: #FF7800;
+                
+                opacity: 0.5;
+            }
         }
     }
 
