--- a/source/scss/blocks/confidence-policy.scss
+++ b/source/scss/blocks/confidence-policy.scss
@@ -8,6 +8,15 @@
 
     &__link {
         border-bottom: 1px solid rgba(48, 41, 219, 0.3);
+
+        &:hover,
+        &:focus {
+            color: #FF7800;
+        }
+
+        &:active {
+            color: #CCBFB6;
+        }
     }
 }
 
