--- a/source/scss/blocks/contact-form.scss
+++ b/source/scss/blocks/contact-form.scss
@@ -53,6 +53,35 @@
             border-bottom: 1px solid #FF7800;
         }
     }
+
+    &__submit-button {
+        background-repeat: no-repeat;
+        background-position: 20px center;
+
+        &--success {
+            border: 1px solid #219653;
+            color: #219653;
+            background-color: transparent;
+            background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M10.0002 15.172L19.1922 5.979L20.6072 7.393L10.0002 18L3.63623 11.636L5.05023 10.222L10.0002 15.172Z' fill='%23219653'/%3E%3C/svg%3E%0A");
+
+            &:focus {
+                background-color: transparent;
+                outline-color: #219653;
+            }
+        }
+
+        &--error {
+            border: 1px solid #EB5757;
+            color: #EB5757;
+            background-color: transparent;
+            background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12.0002 10.586L16.9502 5.63599L18.3642 7.04999L13.4142 12L18.3642 16.95L16.9502 18.364L12.0002 13.414L7.05023 18.364L5.63623 16.95L10.5862 12L5.63623 7.04999L7.05023 5.63599L12.0002 10.586Z' fill='%23EB5757'/%3E%3C/svg%3E%0A");
+
+            &:focus {
+                background-color: transparent;
+                outline-color: #EB5757;
+            }
+        }
+    }
 }
 
 @media (min-width: 1600px) {
@@ -74,7 +103,7 @@
 
         &__input {
             padding-left: 80px;
-            
+
             &:last-of-type {
                 margin-bottom: 50px;
             }
