--- a/source/scss/blocks/about-section.scss
+++ b/source/scss/blocks/about-section.scss
@@ -79,6 +79,13 @@
             font-size: 26px;
             line-height: 36px;
             margin-top: 130px;
+
+            & .orange:first-child {
+    
+                &::before {
+                    top: 16px;
+                }
+            }
         }
     }
 }
