--- a/source/scss/blocks/nav.scss
+++ b/source/scss/blocks/nav.scss
@@ -34,7 +34,7 @@
 
         &--language {
             border: none;
-            background-color: #fff;
+            background-color: #FEFDF9;
         }
     }
 }
@@ -103,7 +103,7 @@
         }
     }
 }
-@media (min-width: 1600px) {
+@media (min-width: 1500px) {
     .nav {
         &__list {
             align-items: center;
