--- a/source/scss/blocks/tel-block.scss
+++ b/source/scss/blocks/tel-block.scss
@@ -36,9 +36,9 @@
     }
 }
 
-@media (min-width: 1600px) {
+@media (min-width: 1500px) {
     .tel-block {
-        width: 580px;
+        width: 40%;
 
         &__footer {
             width: 272px;
