--- a/source/scss/bg.scss
+++ b/source/scss/bg.scss
@@ -1,6 +1,7 @@
 body {
   background-repeat: no-repeat;
   background-position: center 0;
-//   background-image: url("../img/Главная 1.png");
-//   opacity: 0.4;
+  background-color: #FEFDF9;
+  //   background-image: url("../img/Главная 1.png");
+  //   opacity: 0.4;
 }
