--- a/source/scss/blocks/contact-popup.scss
+++ b/source/scss/blocks/contact-popup.scss
@@ -12,7 +12,7 @@
         line-height: 172px;
         letter-spacing: -2px;
         text-transform: uppercase;
-        color: #fff;
+        color: #FEFDF9;
         -webkit-text-stroke-width: 1px;
         -webkit-text-stroke-color: rgba(48, 48, 48, 0.2);
         white-space: nowrap;
@@ -48,7 +48,7 @@
 
 }
 
-@media (min-width: 1600px) {
+@media (min-width: 1500px) {
     .contact-popup {
         &::before {
             width: 88vw;
@@ -83,7 +83,7 @@
         }
 
         &__contact-form {
-            width: 820px;
+            width: 60%;
             padding-top: 30px;
         }
     }
