--- a/source/scss/blocks/reviews-section.scss
+++ b/source/scss/blocks/reviews-section.scss
@@ -2,18 +2,44 @@
     padding-top: 70px;
     padding-bottom: 70px;
 
+    &__wrapper {
+
+        position: relative;
+
+        &::before {
+            position: absolute;
+            content: '';
+            width: 100%;
+            height: 1px;
+            background-color: #C4C4C4;
+            left: 0;
+            top: -60px;
+        }
+    }
+
     &__title {
         margin-left: 15px;
         margin-bottom: 30px;
     }
 }
 
-@media (min-width: 1600px) {
+@media (min-width: 1500px) {
     .reviews-section {
         &__wrapper {
             max-width: 1600px;
             margin: 0 auto;
             padding: 100px;
+            position: relative;
+
+            &::before {
+                position: absolute;
+                content: '';
+                width: calc(100% - 200px);
+                height: 1px;
+                background-color: #C4C4C4;
+                left: 100px;
+                top: 40px;
+            }
         }
     }
 }
