--- a/source/scss/blocks/tabs.scss
+++ b/source/scss/blocks/tabs.scss
@@ -48,6 +48,7 @@
 
         &:nth-child(1) a.tabs__link--active::after {
             content: "01";
+            top: -32px;
         }
 
         &:nth-child(2) a.tabs__link--active::after {
@@ -59,7 +60,8 @@
             top: -32px;
         }
 
-        &:last-child a {
+        &:last-child a,
+        &:first-child a {
             display: block;
             margin-top: 12px;
         }
@@ -81,7 +83,7 @@
         &:focus {
             color: #FF7800;
         }
-        
+
         &::after {
             position: absolute;
             font-family: SF Pro Display, sans-serif;
@@ -89,7 +91,7 @@
             font-weight: 600;
             font-size: 72px;
             line-height: 86px;
-            color: #fff;
+            color: #FEFDF9;
             -webkit-text-stroke-width: 1px;
             -webkit-text-stroke-color: rgba(48, 48, 48, 0.2);
             top: -20px;
@@ -97,16 +99,16 @@
             text-align: center;
             z-index: -1;
         }
-        
+
         &--active {
             color: #3029DB;
             position: relative;
-            
+
             &:hover,
             &:focus {
                 color: #3029DB;
             }
-            
+
             &::before {
                 position: absolute;
                 content: "";
@@ -143,7 +145,8 @@
         }
     }
 }
-@media (min-width: 1600px) {
+
+@media (min-width: 1500px) {
     .tabs {
         &__menu {
             padding-top: 43px;
@@ -154,6 +157,7 @@
             &:nth-child(1) a.tabs__link--active::after {
                 top: -52px;
             }
+
             &:nth-child(3) a.tabs__link--active::after {
                 top: -52px;
             }
