--- a/source/scss/blocks/tab.scss
+++ b/source/scss/blocks/tab.scss
@@ -48,27 +48,27 @@
             left: -18px;
         }
 
-        &:nth-child(1)::before {
-            content: "01";
-        }
-        &:nth-child(2)::before {
-            content: "02";
-        }
-        &:nth-child(3)::before {
-            content: "03";
-        }
-        &:nth-child(4)::before {
-            content: "04";
-        }
-        &:nth-child(5)::before {
-            content: "05";
-        }
-        &:nth-child(6)::before {
-            content: "06";
-        }
-        &:nth-child(7)::before {
-            content: "07";
-        }
+        // &:nth-child(1)::before {
+        //     content: "01";
+        // }
+        // &:nth-child(2)::before {
+        //     content: "02";
+        // }
+        // &:nth-child(3)::before {
+        //     content: "03";
+        // }
+        // &:nth-child(4)::before {
+        //     content: "04";
+        // }
+        // &:nth-child(5)::before {
+        //     content: "05";
+        // }
+        // &:nth-child(6)::before {
+        //     content: "06";
+        // }
+        // &:nth-child(7)::before {
+        //     content: "07";
+        // }
     }
 
     &__item-title {
