--- a/source/scss/fonts.scss
+++ b/source/scss/fonts.scss
@@ -6,6 +6,7 @@
       url('../fonts/SFProDisplay-Regular.woff2') format('woff2'),
       url('../fonts/SFProDisplay-Regular.woff') format('woff'),
       url('../fonts/SFProDisplay-Regular.ttf') format('truetype');
+  font-display: swap;
   font-weight: normal;
   font-style: normal;
 }
@@ -14,10 +15,11 @@
   font-family: 'SF Pro Display';
   src: url('../fonts/SFProDisplay-Medium.eot');
   src: local('SF Pro Display Medium'), local('SFProDisplay-Medium'),
-      url('../fonts/SFProDisplay-Medium.eot?#iefix') format('embedded-opentype'),
-      url('../fonts/SFProDisplay-Medium.woff2') format('woff2'),
-      url('../fonts/SFProDisplay-Medium.woff') format('woff'),
-      url('../fonts/SFProDisplay-Medium.ttf') format('truetype');
+  url('../fonts/SFProDisplay-Medium.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/SFProDisplay-Medium.woff2') format('woff2'),
+  url('../fonts/SFProDisplay-Medium.woff') format('woff'),
+  url('../fonts/SFProDisplay-Medium.ttf') format('truetype');
+  font-display: swap;
   font-weight: 500;
   font-style: normal;
 }
@@ -26,10 +28,11 @@
   font-family: 'SF Pro Display';
   src: url('../fonts/SFProDisplay-Semibold.eot');
   src: local('SF Pro Display Semibold'), local('SFProDisplay-Semibold'),
-      url('../fonts/SFProDisplay-Semibold.eot?#iefix') format('embedded-opentype'),
-      url('../fonts/SFProDisplay-Semibold.woff2') format('woff2'),
-      url('../fonts/SFProDisplay-Semibold.woff') format('woff'),
-      url('../fonts/SFProDisplay-Semibold.ttf') format('truetype');
+  url('../fonts/SFProDisplay-Semibold.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/SFProDisplay-Semibold.woff2') format('woff2'),
+  url('../fonts/SFProDisplay-Semibold.woff') format('woff'),
+  url('../fonts/SFProDisplay-Semibold.ttf') format('truetype');
+  font-display: swap;
   font-weight: 600;
   font-style: normal;
 }
