--- a/source/scss/blocks/tab.scss
+++ b/source/scss/blocks/tab.scss
@@ -6,19 +6,21 @@
     &:nth-child(1) {
         background-image: url("../img/town-mobile.jpg"), url("../img/town-mobile2.jpg");
         background-repeat: no-repeat;
-        background-position: left 27px, right  27px;
+        background-position: left 27px, right 27px;
     }
+
     &:nth-child(2) {
         background-image: url("../img/scale-mobile.jpg"), url("../img/tap-mobile.jpg");
         background-repeat: no-repeat;
-        background-position: 0 27px,193px 27px;
+        background-position: 0 27px, 193px 27px;
         background-size: 188px 162px;
-        
+
         @media (min-resolution: 1.5dppx) {
             background-image: url("../img/scale-mobile@2x.jpg"), url("../img/tap-mobile@2x-1.jpg");
-            
+
         }
     }
+
     &:nth-child(3) {
         background-image: url("../img/safe-mobile.jpg");
         background-repeat: no-repeat;
@@ -95,9 +97,10 @@
 
 @media (min-width: 500px) {
     .tab {
+
         &:nth-child(1),
         &:nth-child(2) {
-            background-position: 20% 27px, 85%  27px;
+            background-position: 20% 27px, 85% 27px;
         }
     }
 }
@@ -105,40 +108,48 @@
 @media (min-width: 768px) {
     .tab {
         padding-top: 300px;
+
         &:nth-child(1) {
             background-image: url("../img/town.jpg"), url("../img/town2.jpg");
-            background-position: 6% 27px, 94%  27px;
+            background-position: 6% 27px, 94% 27px;
             background-size: 400px, 300px;
         }
+
         &:nth-child(2) {
-            background-image: url("../img/tap.png"), url("../img/scale.png") ;
-            background-position: 15% 15px, 79%  17px;
+            background-image: url("../img/tap.png"), url("../img/scale.png");
+            background-position: 15% 15px, 79% 17px;
             background-size: 300px, 300px;
         }
+
         &:nth-child(3) {
             background-image: url("../img/safe.jpg");
         }
     }
 }
+
 @media (min-width: 1480px) {
     .tab {
         padding-top: 92px;
+
         &:nth-child(1) {
-            background-image:  url("../img/town2.jpg");
+            background-image: url("../img/town2.jpg");
             background-position: 212px 42px;
             background-size: 300px, 350px;
         }
+
         &:nth-child(2) {
-            background-image: url("../img/tap.png"), url("../img/scale.png") ;
+            background-image: url("../img/tap.png"), url("../img/scale.png");
             background-position: 280px 380px, 80px 180px;
             background-size: 300px, 350px;
         }
+
         &:nth-child(3) {
             background-position: 95px 116px;
         }
 
         &__features-list {
             margin-left: 50%;
+            max-width: 50%;
         }
 
         &__features-item {
