--- a/source/scss/blocks/ready-section.scss
+++ b/source/scss/blocks/ready-section.scss
@@ -66,6 +66,11 @@
             &:last-child {
                 margin: 0;
 
+                &:nth-child(odd) {
+                    margin-right: auto;
+                    margin-left: 59px;
+                }
+
                 &::after {
                     width: 100%;
                     height: 1px;
